<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Common strings -->
        <string name="app_name">bildfell-notes</string>
        <string name="saveButton">Save</string>
        <string name="cancelButton">Cancel</string>
        <string name="promptName">Enter a name (32 character max):</string>
        <string name="nameHint">Name</string>
        <string name="presetHint">One of above</string>
        <string name="dateHint">yyyy/mm/dd</string>
        <string name="promptDescription">Enter a description (200 character max):</string>
        <string name="textHint">Text</string>
        
    <!-- Used in ClaimsListActivity -->
        <string name="claimsPrompt">All claims in decreasing order by start date:</string>
        <string name="addClaimButton">Add Claim</string>
        
    <!-- Used in ClaimInfoActivity -->
        <string name="title_activity_claim_info">Claim Information</string>
        <string name="claimEdit">Edit Claim</string>
        <string name="claimDelete">Delete Claim</string>
        <string name="claimEmail">Email Claim</string>
        <string name="expensesPrompt">All expenses in decreasing order by date:</string>
        <string name="addExpenseButton">Add Expense</string>
        
    <!-- Used in EditClaimActivity -->
        <string name="title_activity_add_claim">Add Claim</string>
        <string name="title_activity_edit_claim">Edit Claim</string>
        <string name="claimPromptStatus1">Enter status of claim:</string>
        <string name="claimPromptStatus2">(In Progress, Submitted, Returned, Approved)</string>
        <string name="claimPromptStartDate">Enter start date of claim (yyyy/mm/dd):</string>
        <string name="claimPromptEndDate">Enter end date of claim (yyyy/mm/dd):</string>
        
    <!-- Used in ExpenseInfoActivity -->
        <string name="title_activity_expense_info">Expense Information</string>
        <string name="expenseEdit">Edit Expense</string>
        <string name="expenseDelete">Delete Expense</string>
        
    <!-- Used in EditExpenseActivity -->
        <string name="title_activity_add_expense">Add Expense</string>
        <string name="title_activity_edit_expense">Edit Expense</string>
        <string name="expPromptCategory">Enter a category (32 character max):</string>
        <string name="expPromptDate">Enter date of expense (yyyy/mm/dd):</string>
        <string name="expPromptCurrency1">Enter currency:</string>
        <string name="expPromptCurrency2">(CAD, USD, EUR, GBP)</string>
        <string name="expPromptAmount">Enter amount:</string>
        <string name="numberHint">Number</string>

</resources>
